--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,10 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.js"]
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
+              "src/assets/js/color-modes.js"
+            ]
           },
           "configurations": {
             "production": {
